# dpt

./: .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md
benchmark/: CMakeLists.txt  array_transform.cpp  dpt.cpp
data/aol_queries/: .gitignore  Makefile  clean_aol_queries.cpp  dl_aol_queries.sh
data/common_crawl/: dl_common_crawl.sh  uz_common_crawl.sh  wet.paths
data/trec_queries/: dl_and_prepare_trec_queries.sh
dpt/: CMakeLists.txt
dpt/com/: collective.hpp  local.hpp  manager.hpp  one_sided.hpp
dpt/mpi/: all_to_all.hpp  allreduce.hpp  big_type.hpp  environment.cpp  environment.hpp  io.hpp  requestable_array.hpp  type_mapper.hpp
dpt/query/: query_iterator.hpp  query_list.hpp  query_view.hpp
dpt/tree/: compact_trie.hpp  compact_trie_pointer.hpp  distributed_patricia_trie.hpp  patricia_trie.hpp  patricia_trie_pointer.hpp  pointer_node.hpp  search_result.hpp  succinct_node.hpp
dpt/util/: are_same.hpp  macros.hpp  named_structs.hpp  partition.hpp  uint_types.hpp
misc/CMakeModules/: FindSDSL.cmake
misc/doxygen/: Doxyfile.in
misc/lidong/: example_run.sh
tests/: CMakeLists.txt  test_driver.cpp  test_driver_distributed.cpp  testsuite.cmake
tests/com/: collective_test.cpp  local_test.cpp  one_sided_test.cpp
tests/mpi/: environment_test.cpp  io_test.cpp  type_mapper_test.cpp
tests/query/: query_list_test.cpp  query_view_test.cpp
tests/test_data/: bin_size_t_1_20_vec  small_text.txt  small_text_size_t_lcp  small_text_size_t_sa  the_three_brothers.txt  the_three_brothers_size_t_lcp  the_three_brothers_size_t_lcp_40bit  the_three_brothers_size_t_sa  the_three_brothers_size_t_sa_40bit  twenty_lines.txt
tests/tree/: compact_trie_pointer_test.cpp  dpt_test.cpp  patricia_trie_pointer_test.cpp
tests/util/: are_same_test.cpp  partition_test.cpp  uint_types_test.cpp
